revert translation and update

--- a/apps/web/public/static/locales/ar/common.json
+++ b/apps/web/public/static/locales/ar/common.json
@@ -1118,7 +1118,7 @@
   "zapier_setup_instructions": "<0>سجل الدخول إلى حساب Zapier الخاص بك وأنشئ Zap جديد.</0><1>حدد Cal.com كتطبيق Trigger لديك. اختر أيضًا حدث Trigger.</1><2>اختر حسابك ثم أدخل مفتاح API الفريد الخاص بك.</2><3>اختبر Trigger الخاص بك.</3><4>أنت جاهز!</4>",
   "make_setup_instructions": "<0>انتقل إلى <1><0>إنشاء رابط دعوة</0></1> وقم بتثبيت تطبيق Cal.com </0><1> ثم سجّل الدخول إلى حسابك وقم بإنشاء \"سيناريو جديد\".</1><2>اختر Cal.com على أنه أحد تطبيقات \"التشغيل\" لديك. اختر أيضا حدث تشغيل. </2><3>اختر حسابك ثم ادخل مفتاح API الفريد الخاص بك.</3><4>اختبر المشغل لديك.</4><5>لقد أتممت الأمر!</5>",
   "install_zapier_app": "يرجى تثبيت تطبيق Zapier من App Store أولًا.",
-  "install_make_app": "عذرًا، هذا التطبيق غير مثبت على حسابك. يرجى زيارة متجر التطبيقات لدينا لاستكشاف واكتشاف هذا والتطبيقات الرائعة الأخرى.",
+  "install_make_app": "يرجى تثبيت تطبيق Make من متجر التطبيقات أولًا.",
   "connect_apple_server": "الاتصال بخادم Apple",
   "calendar_url": "رابط التقويم",
   "apple_server_generate_password": "أنشئ كلمة مرور خاصة بالتطبيق لاستخدامها مع {{appName}} على",
