--- a/apps/web/public/static/locales/ja/common.json
+++ b/apps/web/public/static/locales/ja/common.json
@@ -1064,7 +1064,7 @@
   "zapier_setup_instructions": "<0>Zapier アカウントにログインし、新しい Zap を作成します。</0><1>Cal.com をトリガーアプリとして選択します。また、トリガーイベントも選択します。</1><2>アカウントを選択し、あなた専用の API キーを入力します。</2><3>トリガーをテストします。</3><4>これで設定は完了です！</4>",
   "make_setup_instructions": "<0><1><0>Make の招待リンク</0></1>に移動して、Cal.com アプリをインストールします。</0><1>Make アカウントにログインして、新しいシナリオ作成します。</1><2>Cal.com をトリガーアプリとして選択します。またトリガーイベントを選びます。</2><3>アカウントを選んでから、あなた専用のAPIキーを入力します。</3><4>トリガーをテストします。</4><5>設定完了！</5>",
   "install_zapier_app": "まず、アプリストアで Zapier アプリをインストールしてください。",
-  "install_make_app": "申し訳ありませんが、このアプリはあなたのアカウントにインストールされていません。アプリ ストアにアクセスして、このアプリやその他の優れたアプリを探索して見つけてください。",
+  "install_make_app": "まず、アプリストアで Make アプリをインストールしてください。",
   "connect_apple_server": "Apple のサーバーに接続",
   "calendar_url": "カレンダーの URL",
   "apple_server_generate_password": "以下で {{appName}} で使用するアプリ固有のパスワードを生成しましょう: ",
