add copy referral link

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -210,6 +210,7 @@
   "view_notifications": "View notifications",
   "view_public_page": "View public page",
   "copy_public_page_link": "Copy public page link",
+  "copy_referral_link": "Copy referral link",
   "sign_out": "Sign out",
   "add_another": "Add another",
   "install_another": "Install another",
