--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2531,7 +2531,7 @@
   "booking_question_response_variables": "Booking question response variables",
   "reschedule_with_same_round_robin_host_title": "Reschedule with same Round-Robin host",
   "reschedule_with_same_round_robin_host_description": "Rescheduled events will be assigned to the same host as initially scheduled",
-  "disable_org_url_label": "Disable Organization URL and redirect",
-  "disable_org_url_description": "Hide your acme.cal.com subdomain and redirect to acme.com instead.",
+  "disable_org_url_label": "Disable public organization profile and redirect",
+  "disable_org_url_description": "Redirects acme.cal.com to acme.com",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
