--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -70,6 +70,8 @@
   "meeting_awaiting_payment": "Your meeting is awaiting payment",
   "dark_theme_contrast_error": "Dark Theme color doesn't pass contrast check. We recommend you change this colour so your buttons will be more visible.",
   "light_theme_contrast_error": "Light Theme color doesn't pass contrast check. We recommend you change this colour so your buttons will be more visible.",
+  "event_type_color_light_theme_contrast_error": "Light Theme color doesn't pass contrast check. We recommend you change this color so your event types color will be more visible.",
+  "event_type_color_dark_theme_contrast_error": "Dark Theme color doesn't pass contrast check. We recommend you change this color so your event types color will be more visible.",
   "payment_not_created_error": "Payment could not be created",
   "couldnt_charge_card_error": "Could not charge card for Payment",
   "no_available_users_found_error": "No available users found. Could you try another time slot?",
@@ -776,6 +778,8 @@
   "brand_color": "Brand Color",
   "light_brand_color": "Brand Color (Light Theme)",
   "dark_brand_color": "Brand Color (Dark Theme)",
+  "light_event_type_color": "Event Type Color (Light Theme)",
+  "dark_event_type_color": "Event Type Color (Dark Theme)",
   "file_not_named": "File is not named [idOrSlug]/[user]",
   "create_team": "Create Team",
   "name": "Name",
@@ -2496,6 +2500,8 @@
   "unable_to_subscribe_to_the_platform": "An error occurred while trying to subscribe to the platform plan, please try again later",
   "updating_oauth_client_error": "An error occurred while updating the OAuth client, please try again later",
   "creating_oauth_client_error": "An error occurred while creating the OAuth client, please try again later",
+  "event_type_color": "Event type color",
+  "event_type_color_description": "This is only used for event type & booking differentiation within the app. It is not displayed to bookers.",
   "mark_as_no_show_title": "Mark as no show",
   "x_marked_as_no_show": "{{x}} marked as no-show",
   "x_unmarked_as_no_show": "{{x}} unmarked as no-show",
