--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2530,7 +2530,9 @@
   "new_option": "New option",
   "update_profile":"Update member",
   "attribute_updated_successfully": "Attribute updated successfully",
+  "attributes_edited_successfully": "Attributes edited successfully",
   "attribute_meta_description": "Manage attributes for your team members",
+  "attributes_edit_description": "Edit attributes for your team members",
   "back_to_attributes": "Back to attributes",
   "delete_attribute": "Are you sure you want to delete this option?",
   "delete_attribute_description":"This option is assigned to {{numberOfUsers}} members. Deleting it will remove it from their profile.",
