--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -615,6 +615,7 @@
   "edit_role": "Edit Role",
   "edit_team": "Edit team",
   "reject": "Reject",
+  "reject_with_reason": "Reject with reason",
   "reject_all": "Reject all",
   "accept": "Accept",
   "leave": "Leave",
