--- a/apps/web/public/static/locales/bg/common.json
+++ b/apps/web/public/static/locales/bg/common.json
@@ -17,5 +17,6 @@
   "old_email_address": "Стар имейл",
   "new_email_address": "Нов имейл",
   "verify_email_page_body": "Изпратихме имейл до {{email}}. Важно е да проверите имейл адреса си, за да гарантирате най-добрата възможност за доставка на имейли и календари от {{appName}}.",
-  "verify_email_banner_body": "Проверете имейл адреса си, за да гарантирате най-добрата доставка на имейли и календари"
+  "verify_email_banner_body": "Проверете имейл адреса си, за да гарантирате най-добрата доставка на имейли и календари",
+  "signing_up_terms": "При продължаване вие се съгласявате с нашите <0>Условия за ползване</0> и <1>Политика за поверителност</1>"
 }
