--- a/apps/web/public/static/locales/hu/common.json
+++ b/apps/web/public/static/locales/hu/common.json
@@ -2438,5 +2438,6 @@
   "unable_to_subscribe_to_the_platform": "Hiba történt a platformcsomagra való előfizetés során. Kérjük, próbálja újra később",
   "updating_oauth_client_error": "Hiba történt az OAuth-kliens frissítésekor. Kérjük, próbálja újra később",
   "creating_oauth_client_error": "Hiba történt az OAuth-kliens létrehozásakor. Kérjük, próbálja újra később",
+  "signing_up_terms": "Folytatva elfogadja a <0>Felhasználási feltételeinket</0> és a <1>Adatvédelmi szabályzatunkat</1>",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Adja hozzá az új karakterláncokat fent ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
