--- a/apps/web/public/static/locales/km/common.json
+++ b/apps/web/public/static/locales/km/common.json
@@ -252,5 +252,6 @@
   "users": "អ្នកប្រើប្រាស់",
   "user": "អ្នកប្រើប្រាស់",
   "general_description": "គ្រប់គ្រងការកំណត់សម្រាប់ភាសា និងល្វែងម៉ោងរបស់អ្នក។",
-  "timezone_variable": "ល្វែងម៉ោង"
+  "timezone_variable": "ល្វែងម៉ោង",
+  "signing_up_terms": "ដោយបន្តទៅអ្នកយល់ព្រមជាមួយ<0>លក្ខខណ្ឌរបស់យើង</0> និង <1>គោលនយោបាយឯកជនវិទ្យា</1>"
 }
