--- a/apps/web/public/static/locales/ta/common.json
+++ b/apps/web/public/static/locales/ta/common.json
@@ -172,5 +172,6 @@
   "events_rescheduled": "நிகழ்வுகள் மீண்டும் திட்டமிடப்பட்டுள்ளன",
   "from_last_period": "கடந்த காலத்திலிருந்து",
   "from_to_date_period": "{{startDate}} லிருந்து {{endDate}} வரை",
-  "event_trends": "நிகழ்வுப் போக்குகள்"
+  "event_trends": "நிகழ்வுப் போக்குகள்",
+  "signing_up_terms": "தொடர்ந்து செய்தால், எங்கள் <0>சிப்பிக்குகள்</0> மற்றும் <1>தனியுரிமை கொள்கை</1> உடன் நீங்கள் ஒப்புக்கொள்கிறீர்கள்"
 }
