fix: multiple_duration_timeUnit_short Chinese translation

--- a/apps/web/public/static/locales/zh-CN/common.json
+++ b/apps/web/public/static/locales/zh-CN/common.json
@@ -692,6 +692,7 @@
   "default_duration_no_options": "请先选择可用时长",
   "multiple_duration_mins": "{{count}} $t(minute_timeUnit)",
   "multiple_duration_timeUnit": "{{count}} $t({{unit}}_timeUnit)",
+  "multiple_duration_timeUnit_short": "{{count}} $t({{unit}}_short)",
   "minutes": "分钟",
   "use_cal_ai_to_make_call_description": "使用 Cal.ai 获得人工智能驱动的电话号码或拨打电话给访客。",
   "round_robin": "轮流模式",
@@ -1195,6 +1196,8 @@
   "day_timeUnit": "天",
   "hour_timeUnit": "小时",
   "minute_timeUnit": "分钟",
+  "minute_short": "分钟",
+  "hour_short": "小时",
   "new_workflow_heading": "创建您的第一个工作流程",
   "new_workflow_description": "工作流程可让您自动发送提醒和通知。",
   "active_on": "活跃于",
@@ -1246,8 +1249,10 @@
   "reminder_email": "提醒: 和 {{name}} 在 {{date}} 的 {{eventType}}",
   "not_triggering_existing_bookings": "不会针对已经存在的预约而触发，因为用户在预约活动时会被要求提供电话号码。",
   "minute_one": "{{count}} 分钟",
+  "minute_one_short": "{{count}} 分钟",
   "minute_other": "{{count}} 分钟",
   "hour_one": "{{count}} 小时",
+  "hour_one_short": "{{count}} 小时",
   "hour_other": "{{count}} 小时",
   "invalid_input": "输入无效",
   "broken_video_action": "我们无法将 <1>{{location}}</1> 会议链接添加至您的预约活动。请联系您的受邀者或更新日历活动以添加详细信息。您可以<3>更改活动类型的位置</3>，或尝试<5>删除应用再重新添加应用</5>。",
