--- a/apps/web/public/static/locales/zh-TW/common.json
+++ b/apps/web/public/static/locales/zh-TW/common.json
@@ -661,6 +661,7 @@
   "default_duration_no_options": "請先選擇可預約的時間長度",
   "multiple_duration_mins": "{{count}} $t(minute_timeUnit)",
   "multiple_duration_timeUnit": "{{count}} $t({{unit}}_timeUnit)",
+  "multiple_duration_timeUnit_short": "{{count}} $t({{unit}}_short)",
   "minutes": "分鐘",
   "round_robin": "循環制",
   "round_robin_description": "與多位團隊成員進行週期會議。",
@@ -1145,6 +1146,8 @@
   "day_timeUnit": "天",
   "hour_timeUnit": "小時",
   "minute_timeUnit": "分鐘",
+  "minute_short": "分鐘",
+  "hour_short": "小時",
   "new_workflow_heading": "建立您的第一個工作流程",
   "new_workflow_description": "工作流程可讓您自動傳送提醒和通知。",
   "active_on": "啟用類型：",
@@ -1195,8 +1198,10 @@
   "reminder_email": "提醒：{{date}} 與 {{name}} 的 {{eventType}}",
   "not_triggering_existing_bookings": "不為現有預約觸發，使用者會在預約活動時收到輸入電話號碼的提示。",
   "minute_one": "{{count}} 分鐘",
+  "minute_one_short": "{{count}} 分鐘",
   "minute_other": "{{count}} 分鐘",
   "hour_one": "{{count}} 小時",
+  "hour_one_short": "{{count}} 小時",
   "hour_other": "{{count}} 小時",
   "invalid_input": "輸入內容無效",
   "broken_video_action": "我們無法將 <1>{{location}}</1> 會議連結新增至您已預定的活動。請聯絡您的受邀者或更新行事曆活動來新增詳細資料。您可以<3>變更活動類型的地點</3>，或試著<5>移除應用程式，然後再次重新安裝。</5>",
