--- a/apps/web/public/static/locales/eu/common.json
+++ b/apps/web/public/static/locales/eu/common.json
@@ -762,5 +762,10 @@
   "add_an_option": "Gehitu aukera bat",
   "radio": "Irratia",
   "all_bookings_filter_label": "Erreserba guztiak",
-  "timezone_variable": "Ordu-eremua"
+  "timezone_variable": "Ordu-eremua",
+  "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
+  "minute_short": "min",
+  "hour_short": "ordu",
+  "minute_one_short": "{{count}} min",
+  "hour_one_short": "{{count}} ordu"
 }
