--- a/apps/web/public/static/locales/da/common.json
+++ b/apps/web/public/static/locales/da/common.json
@@ -1539,5 +1539,10 @@
   "need_help": "Brug for hjælp?",
   "send_email": "Send e-mail",
   "email_team_invite|subject|invited_to_regular_team": "{{user}} inviterede dig til at deltage i teamet {{team}} på {{appName}}",
-  "signing_up_terms": "Ved at fortsætte accepterer du vores <0>Vilkår</0> og <1>Privatlivspolitik</1>."
+  "signing_up_terms": "Ved at fortsætte accepterer du vores <0>Vilkår</0> og <1>Privatlivspolitik</1>.",
+  "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
+  "minute_short": "min",
+  "hour_short": "t",
+  "minute_one_short": "{{count}} min",
+  "hour_one_short": "{{count}} t"
 }
