--- a/apps/web/public/static/locales/et/common.json
+++ b/apps/web/public/static/locales/et/common.json
@@ -2481,5 +2481,10 @@
   "USER_MEMBER_OF_OTHER_ORGANIZATION": "Kasutaja on organisatsiooni liige, millesse see meeskond ei kuulu.",
   "rescheduling_not_possible": "Ümberajastamine ei ole võimalik, kuna sündmus on aegunud",
   "event_expired": "See sündmus on aegunud",
+  "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
+  "minute_short": "min",
+  "hour_short": "t",
+  "minute_one_short": "{{count}} min",
+  "hour_one_short": "{{count}} t",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
