--- a/apps/web/public/static/locales/fr/common.json
+++ b/apps/web/public/static/locales/fr/common.json
@@ -2471,5 +2471,10 @@
   "USER_PENDING_MEMBER_OF_THE_ORG": "L'utilisateur est un membre en attente de l'organisation",
   "USER_ALREADY_INVITED_OR_MEMBER": "L'utilisateur a déjà été invité ou est déjà membre",
   "USER_MEMBER_OF_OTHER_ORGANIZATION": "L'utilisateur est membre d'une organisation dont cette équipe ne fait pas partie.",
+  "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
+  "minute_short": "min",
+  "hour_short": "h",
+  "minute_one_short": "{{count}} min",
+  "hour_one_short": "{{count}} h",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Ajoutez vos nouvelles chaînes ci-dessus ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
