--- a/apps/web/public/static/locales/km/common.json
+++ b/apps/web/public/static/locales/km/common.json
@@ -252,5 +252,10 @@
   "users": "អ្នកប្រើប្រាស់",
   "user": "អ្នកប្រើប្រាស់",
   "general_description": "គ្រប់គ្រងការកំណត់សម្រាប់ភាសា និងល្វែងម៉ោងរបស់អ្នក។",
-  "timezone_variable": "ល្វែងម៉ោង"
+  "timezone_variable": "ល្វែងម៉ោង",
+  "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
+  "minute_short": "នាទី",
+  "hour_short": "ម៉ោង",
+  "minute_one_short": "{{count}} នាទី",
+  "hour_one_short": "{{count}} ម៉ោង"
 }
