--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2532,19 +2532,19 @@
   "event_expired": "This event is expired",
   "skip_contact_creation": "Skip creating contacts if they do not exist in {{appName}} ",
   "skip_writing_to_calendar_note": "If your ICS link is read-only (e.g., Proton Calendar), check the box above to avoid errors. You'll also need to manually update your calendar for changes.",
-  "attributes":"Attributes",
+  "attributes": "Attributes",
   "new_attribute": "New attribute",
   "add_attributes": "Add attributes",
   "add_attributes_description": "Add attributes to your team members",
   "new_option": "New option",
-  "update_profile":"Update member",
+  "update_profile": "Update member",
   "attribute_updated_successfully": "Attribute updated successfully",
   "attributes_edited_successfully": "Attributes edited successfully",
   "attribute_meta_description": "Manage attributes for your team members",
   "attributes_edit_description": "Edit attributes for your team members",
   "back_to_attributes": "Back to attributes",
   "delete_attribute": "Are you sure you want to delete this option?",
-  "delete_attribute_description":"This option is assigned to {{numberOfUsers}} members. Deleting it will remove it from their profile.",
+  "delete_attribute_description": "This option is assigned to {{numberOfUsers}} members. Deleting it will remove it from their profile.",
   "disable_all_emails_to_attendees": "Disable standard emails to attendees related to this event type",
   "disable_all_emails_description": "Disables standard email communication related to this event type, including booking confirmations, reminders, and cancellations.",
   "disable_all_emails_to_hosts": "Disable standard emails to hosts related to this event type",
@@ -2563,9 +2563,11 @@
   "outlook_connect_atom_loading_label": "Checking Outlook Calendar",
   "booking_question_response_variables": "Booking question response variables",
   "managed_by_teamAdmins": "Managed by {{teamAdmins}}",
-  "number_of_options":"{{count}} options",
+  "number_of_options": "{{count}} options",
   "reschedule_with_same_round_robin_host_title": "Reschedule with same Round-Robin host",
   "reschedule_with_same_round_robin_host_description": "Rescheduled events will be assigned to the same host as initially scheduled",
-   "disable_input_if_prefilled": "Disable input if the URL identifier is prefilled",
+  "disable_input_if_prefilled": "Disable input if the URL identifier is prefilled",
+  "time_increment": "Time increment",
+  "time_increment_hint": "Time increment affects the time selection options in this page only, will not affect the way time displayed in booking page.",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
